styles/general.css
@font-face {
    font-family: 'jacob-cursive'; 
    src: url('../assets/JacobCursive.ttf');
}

.cursive_text{
	font-family: 'jacob-cursive';
	font-size: 2rem;
	color: #bcc0c6;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
	scrollbar-width: none;
}

body {
	font-family: 'Poppins', sans-serif;
	color: #333;
	line-height: 1.6;
}

#disclaimer {
	display: none;
	height: 100vh;
	width: 100%;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

#disclaimer h2 {
	padding: 0px 0px 15px 0px;
}

#disclaimer img {
	width: 70%;
	height: auto;
	max-width: 350px;
}

#disclaimer p {
	font-size: 1rem;
    color: #6c757d;
	text-align: center;
	padding: 25px 50px 0px 50px;
	max-width: 500px;
}

.page_section {
	display: flex;
	justify-content: space-evenly;
	height: calc(100vh - 100.8px);
	align-items: center;
}

.container, .nav_container {
	width: 85%;
	margin: auto;
	overflow: visible;
	padding: 0 20px;
}

.nav_container {
	display: flex; 
	align-items: center; 
	justify-content: space-around;
}

header {
	background: white;
	padding: 20px 0;
	border-bottom: 1px solid #eee;
	display: flex;
	align-items: center;
	justify-content: space-around;
}

header .logo img {
	width: 140px;
	display: flex; 
	align-items: center;
	width: 180px; 
	height: 60px;
}

header nav ul {
	list-style: none;
	display: flex;
	gap: 25px;
}

header nav ul li a {
	text-decoration: none;
	color: #333;
	font-weight: 500;
	cursor: pointer;
}

.site-footer {
	background-color: #f7f8fc;
	padding: 20px 0 20px;
	font-size: 1rem;
	color: #6c757d;
}

.site-footer h6 {
	color: #c6b6fc;
	font-size: 1.2rem;
	text-transform: uppercase;
	margin-top: 5px;
}

.site-footer p.text-justify {
	line-height: 1.6;
}

.footer-container {
	max-width: 1200px;
	margin: auto;
	padding: 0 20px;
}

.footer-row {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	margin-bottom: 20px;
}

.footer-column {
	flex: 1;
	margin: 0 10px;
	min-width: 200px;
}

.footer-links {
	list-style: none;
	padding-left: 0;
}

.footer-links li {
	margin-bottom: 10px;
}

.footer-links a {
	color: #6c757d;
	text-decoration: none;
}

.footer-bottom {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding-top: 20px;
	border-top: 1px solid rgb(177, 182, 188);
	opacity: 0.5;
}

.copyright-text {
	margin: 0;
	color: #6c757d;
}

.social-icons {
	list-style: none;
	padding-left: 0;
	display: flex;
}

.social-icons li {
	margin-right: 10px;
}

.social-icons a {
	background-color: #c6b6fc;
	color: #6c757d;
	font-size: 16px;
	display: inline-block;
	width: 40px;
	height: 40px;
	line-height: 40px;
	text-align: center;
	border-radius: 50%;
	transition: background-color 0.2s;
	cursor: pointer;
}

.fa-spinner {
	display: inline-block;
	animation: spin 2s linear infinite;
}

@keyframes spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

@media (max-width: 900px) {
    body > *:not(#disclaimer) {
        display: none;
    }

    #disclaimer {
        display: flex;
    }
}

